css/taskboard.css
.interval-button {
	padding:5px;
}

.context-menu-item {
	padding-top:5px;
	padding-bottom:5px;
}
.my-context-menu{
	width:100px !important;
	min-width:100px !important;
}

.repeat-icon{
	opacity:0.1;
	position:absolute;
}
.repeat-num{
	opacity:0.8;
	position:absolute;
}
.repeat-icon-past {
	font-size:2.6em;
	top:0.1em;
	right:0.15em;
}
.repeat-num-past {
	top:0.8em;
	right:1em;
}
.repeat-icon-normal {
	font-size:3em;
	right:0.1em;
	bottom:0.1em;
}
.repeat-num-normal {
	right:1em;
	bottom:1.1em;
}


.left-icon{
}
.left-icon-normal {
	position:absolute;
	font-size:3em;
	left:0.1em;
	bottom:0.1em;
}
.left-icon-past {
	float:left;
	position:relative;
	font-size:2.6em;
	top:-0.2em;
}
.left-label{
}
.left-label-normal {
	position:absolute;
	left:1em;
	bottom:0.4em;
	font-size:1.2em;
}
.left-label-past {
	float:left;
	position:relative;
	left:-2.1em;
	top:0.3em;
}


#taskboard-toolbar {
	display:flex;
}
#left-buttons {
	flex: 1 99 600px;
	text-align:left;
}
#middle-buttons {
	flex-grow: 0;
	flex-shrink: 1;
	flex-basis: 40em;
	/*flex: 0 1 430px;*/
	text-align:center;
	display:none;
}
.middle-button {
	margin-top:30px;
	margin-left:30px;
	display:inline-block;
}
.shape-button {
	height:2em;
}
#right-buttons {
	flex: 1 99 600px;
	text-align:right;
	display:none;
}

.task-block {
	position:relative;
	display:inline-block;
	padding: 0.8em;
	margin: 0.8em;
	font-family: arial;
	float:left;
	cursor:hand;
}

.past-task {
	width: 95%;
	text-align: left;
}
.now-task {
	box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
	text-align: center;
	}
.later-task {
	text-align: center;
	opacity: 0.5;
}
.wide-task {
	height:4em;
	width:20em;
	padding-left:3em;
	padding-right:3em;
}
.default-task {
	height:10em;
	width:16em;
}

.finish-area {
	height:100px;
	width:200px;
	margin:10px;
	padding:10px;
	float:right;
	margin-right:15px;
	text-align:center;
	color:#FFFFFF;
}
.normal-finish {
	background:#000000;
}
.hover-finish {
	background:#444444;
	border: 2px solid white;
}

.task-row:after {
	clear:both;
	content:" ";
	display:table;
}
.left-side{
	float:left;
	flex-grow: 0;
	flex-shrink: 1;
	}
.task-row {
	margin: 0.5em;
	padding: 0.5em;
	padding-left:0.8em;
	padding-right:1.6em;
	border-radius: 10px;
	border: 2px solid #000000;
	padding-left:2em;
	}
.normal-row {
	background: #F0F0F0;
}
.hover-row {
	background: #FFFFFF;
}
.table-bar {
	float:left;
	width:100%;
}
.table-contents {
	float:left;
}

.misc-block {
	margin:0.5em;
	float: left;
	padding: 0.5em;
	padding-left:1em;
	padding-right:2em;
	border-radius: 10px;
	border: 2px solid #000000;
	flex-grow: 1;
	flex-shrink: 99;
	flex-basis: auto;
}
.misc-block:after {
	clear:both;
	content:" ";
	display:table;
}		
.app-header {
	color: #fff;
	text-shadow: -1px -1px 0 #000,1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;  
	-webkit-font-smoothing: antialiased;
	}
.row-name {
	clear:both;
	float:left;
	width:0px;
	position:relative;
	display:inline-block;
	}
.wide-row-name {
	height:4em;
}
.default-row-name {
	height:10em;
}
.vertical-text {
	transform: translate(-50%) translate(-1.5em) rotate(-90deg);
	transform-origin: center center 0em;
	text-align:center;
	position:absolute;
	top:50%;
	left:10px;
	}
.toolbar-button {
	margin:15px;
	margin-left: 30px;
}
.ui-dialog .ui-dialog-buttonpane button {
	padding-top: 5px;
	padding-bottom: 5px;
}
.my-dialog {
	display:none;
}

